# Portfolio-Management-app

./: LICENSE  README.md  app.py  pyproject.toml
templates/: home.html
